Finish: home, about.

--- a/about.html
+++ b/about.html
@@ -79,7 +79,7 @@
                 </div>
 
                 <div class="about__data">
-                    <h2 class="section__title about__title">Machines With <br> Future  Eco Technology</h2>
+                    <h2 class="section__title about__title">Machines With <br>Gas-Gasoline Technology</h2>
                     <p class="about__description">See the future with high-performance Gas cars produced by
                         renowned brands. They feature futuristic builds and designs with
                         new and innovative platforms that last a long time.</p>
@@ -98,31 +98,135 @@
 
         <!--==================== FEATURED ====================-->
         <section class="featured section" id="featured">
-            <h2 class="section__title">Our Flote</h2>
+            <h2 class="section__title">Our 13 Cars Flote</h2>
             <div class="featured__container container">
                 <ul class="featured__filters">
                     <li>
                         <button class="featured__item" data-filter=".tesla">
-                            <img src="assets/img/hyundai-logo.png" alt="">
+                            <img src="assets/img/kia-logo.png" alt="">
 
                         </button>
                     </li>
                     <li>
                         <button class="featured__item" data-filter=".audi">
-                            <img src="assets/img/kia-logo.png" alt="">
+                            <img src="assets/img/hyundai-logo.png" alt="">
                         </button>
                     </li>
                 </ul>
 
                 <div class="featured__content grid">
 
+                    <article class="featured__card mix audi">
+                        <div class="shape shape__smaller"></div>
+
+                        <h1 class="featured__title">Tucson</h1>
+                        <h3 class="featured__subtitle">Hyundai</h3>
+                        <hr>
+                        <h3 class="featured__price">$280 us at Day</h3>
+                        <img src="assets/img/Car-13.webp" alt="" class="featured__img">
+                        <button class="button featured__button">
+                            <a href="rent.html" class="button">Rent</a>
+                        </button>
+
+                    </article>
+                    <article class="featured__card mix tesla">
+                        <div class="shape shape__smaller"></div>
+
+                        <h1 class="featured__title">Sportage</h1>
+                        <h3 class="featured__subtitle">Kia</h3>
+                        <hr>
+                        <h3 class="featured__price">$280 us at Day</h3>
+                        <img src="assets/img/Car-10.webp" alt="" class="featured__img">
+                        <button class="button featured__button">
+                            <a href="rent.html" class="button">Rent</a>
+                        </button>
+
+                    </article>
+                    <article class="featured__card mix audi">
+                        <div class="shape shape__smaller"></div>
+
+                        <h1 class="featured__title">i20 Sedan</h1>
+                        <h3 class="featured__subtitle">Hyundai</h3>
+                        <hr>
+                        <h3 class="featured__price">$180 us at Day</h3>
+                        <img src="assets/img/Car-3.png" alt="" class="featured__img">
+                        <button class="button featured__button">
+                            <a href="rent.html" class="button">Rent</a>
+                        </button>
+
+                    </article>
                     <article class="featured__card mix tesla">
                         <div class="shape shape__smaller"></div>
 
                         <h1 class="featured__title">Picanto</h1>
                         <h3 class="featured__subtitle">Kia</h3>
                         <hr>
-                        <h3 class="featured__price">$100 us at Day</h3>
+                        <h3 class="featured__price">$150 us at Day</h3>
+                        <img src="assets/img/Car-4.png" alt="" class="featured__img">
+                        <button class="button featured__button">
+                            <a href="rent.html" class="button">Rent</a>
+                        </button>
+
+                    </article>
+                    <article class="featured__card mix tesla">
+                        <div class="shape shape__smaller"></div>
+
+                        <h1 class="featured__title">Rio Sedan</h1>
+                        <h3 class="featured__subtitle">Kia</h3>
+                        <hr>
+                        <h3 class="featured__price">$180 us at Day</h3>
+                        <img src="assets/img/Car-2.webp" alt="" class="featured__img">
+                        <button class="button featured__button">
+                            <a href="rent.html" class="button">Rent</a>
+                        </button>
+
+                    </article>
+                    <article class="featured__card mix tesla">
+                        <div class="shape shape__smaller"></div>
+
+                        <h1 class="featured__title">Picanto</h1>
+                        <h3 class="featured__subtitle">Kia</h3>
+                        <hr>
+                        <h3 class="featured__price">$150 us at Day</h3>
+                        <img src="assets/img/Car-1.png" alt="" class="featured__img">
+                        <button class="button featured__button">
+                            <a href="rent.html" class="button">Rent</a>
+                        </button>
+
+                    </article>
+                    <article class="featured__card mix tesla">
+                        <div class="shape shape__smaller"></div>
+
+                        <h1 class="featured__title">Picanto</h1>
+                        <h3 class="featured__subtitle">Kia</h3>
+                        <hr>
+                        <h3 class="featured__price">$150 us at Day</h3>
+                        <img src="assets/img/Car-5.webp" alt="" class="featured__img">
+                        <button class="button featured__button">
+                            <a href="rent.html" class="button">Rent</a>
+                        </button>
+
+                    </article>
+                    <article class="featured__card mix tesla">
+                        <div class="shape shape__smaller"></div>
+
+                        <h1 class="featured__title">Picanto</h1>
+                        <h3 class="featured__subtitle">Kia</h3>
+                        <hr>
+                        <h3 class="featured__price">$150 us at Day</h3>
+                        <img src="assets/img/Car-6.png" alt="" class="featured__img">
+                        <button class="button featured__button">
+                            <a href="rent.html" class="button">Rent</a>
+                        </button>
+
+                    </article>
+                    <article class="featured__card mix tesla">
+                        <div class="shape shape__smaller"></div>
+
+                        <h1 class="featured__title">Picanto</h1>
+                        <h3 class="featured__subtitle">Kia</h3>
+                        <hr>
+                        <h3 class="featured__price">$150 us at Day</h3>
                         <img src="assets/img/Car-7.jpg" alt="" class="featured__img">
                         <button class="button featured__button">
                             <a href="rent.html" class="button">Rent</a>
@@ -132,11 +236,11 @@
                     <article class="featured__card mix tesla">
                         <div class="shape shape__smaller"></div>
 
-                        <h1 class="featured__title">Cerato</h1>
+                        <h1 class="featured__title">Rio</h1>
                         <h3 class="featured__subtitle">Kia</h3>
                         <hr>
-                        <h3 class="featured__price">$170 us at Day</h3>
-                        <img src="assets/img/Car-4.webp" alt="" class="featured__img">
+                        <h3 class="featured__price">$180 us at Day</h3>
+                        <img src="assets/img/Car-8.webp" alt="" class="featured__img">
                         <button class="button featured__button">
                             <a href="rent.html" class="button">Rent</a>
                         </button>
@@ -145,27 +249,40 @@
                     <article class="featured__card mix audi">
                         <div class="shape shape__smaller"></div>
 
-                        <h1 class="featured__title">Tucson</h1>
+                        <h1 class="featured__title">i20 Sedan</h1>
                         <h3 class="featured__subtitle">Hyundai</h3>
                         <hr>
-                        <h3 class="featured__price">$260 us at Day</h3>
-                        <img src="assets/img/Car-3.webp" alt="" class="featured__img">
+                        <h3 class="featured__price">$180 us at Day</h3>
+                        <img src="assets/img/Car-9.png" alt="" class="featured__img">
                         <button class="button featured__button">
                             <a href="rent.html" class="button">Rent</a>
                         </button>
 
                     </article>
-                    <article class="featured__card mix porsche">
+                    <article class="featured__card mix tesla">
                         <div class="shape shape__smaller"></div>
 
                         <h1 class="featured__title">Sportage</h1>
                         <h3 class="featured__subtitle">Kia</h3>
                         <hr>
                         <h3 class="featured__price">$280 us at Day</h3>
-                        <img src="assets/img/Car-9.webp" alt="" class="featured__img">
+                        <img src="assets/img/Car-12.png" alt="" class="featured__img">
                         <button class="button featured__button">
                             <a href="rent.html" class="button">Rent</a>
                         </button>
+                    </article>
+                    <article class="featured__card mix audi">
+                        <div class="shape shape__smaller"></div>
+
+                        <h1 class="featured__title">i20 HB</h1>
+                        <h3 class="featured__subtitle">Hyundai</h3>
+                        <hr>
+                        <h3 class="featured__price">$180 us at Day</h3>
+                        <img src="assets/img/Car-11.jpg" alt="" class="featured__img">
+                        <button class="button featured__button">
+                            <a href="rent.html" class="button">Rent</a>
+                        </button>
+
                     </article>
 
                 </div>
