--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@
             <div class="home__container container grid">
                 <div class="home__data">
                     <h1 class="home__title">
-                        Rent a Car in Bogota
+                        Nieto Rent a Car in Bogota
                     </h1>
                     <h2 class="home__subtitle">
                         Kia Picanto
                     </h2>
                     <h3 class="home__elec">
-                        99 us/Dollars at Day
+                        100 us/Dollars at Day
                     </h3>
                 </div>
 
@@ -140,13 +140,13 @@
                     <img src="assets/img/Interior.jpg" alt="" class="about__img">
 
                     <div class="about__card">
-                        <h3 class="about__card-title">12 Cars in our Flote</h3>
+                        <h3 class="about__card-title">13 Cars in our Flote</h3>
                         <p class="about__card-description">Confortables Vehicles</p>
                     </div>
                 </div>
 
                 <div class="about__data">
-                    <h2 class="section__title about__title">Machines With <br> Future  Eco Technology</h2>
+                    <h2 class="section__title about__title">New Machines With <br>Gas Technology</h2>
                     <p class="about__description">See the future with high-performance Gas cars produced by
                         renowned brands. They feature futuristic builds and designs with
                         new and innovative platforms that last a long time.</p>
@@ -168,13 +168,13 @@
                 <ul class="featured__filters">
                     <li>
                         <button class="featured__item" data-filter=".tesla">
-                            <img src="assets/img/hyundai-logo.png" alt="">
+                            <img src= "assets/img/kia-logo.png" alt="">
 
                         </button>
                     </li>
                     <li>
                         <button class="featured__item" data-filter=".audi">
-                            <img src="assets/img/kia-logo.png" alt="">
+                            <img src= "assets/img/hyundai-logo.png" alt="">
                         </button>
                     </li>
                 </ul>
@@ -187,21 +187,49 @@
                         <h1 class="featured__title">Picanto</h1>
                         <h3 class="featured__subtitle">Kia</h3>
                         <hr>
-                        <h3 class="featured__price">$100 us at Day</h3>
+                        <h3 class="featured__price">$120 us at Day</h3>
                         <img src="assets/img/Front-Black.png" alt="" class="featured__img">
                         <button class="button featured__button">
                             <a href="rent.html" class="button">Rent</a>
                         </button>
 
                     </article>
+                    <article class="featured__card mix audi">
+                        <div class="shape shape__smaller"></div>
+
+                        <h1 class="featured__title">HB20</h1>
+                        <h3 class="featured__subtitle">Hyundai</h3>
+                        <hr>
+                        <h3 class="featured__price">$130 us at Day</h3>
+                        <img src="assets/img/hyundai-hb20-blue-show.png" alt="" class="featured__img">
+                        <button class="button featured__button">
+                            <a href="rent.html" class="button">Rent</a>
+                        </button>
+
+                    </article>
+                    <article class="featured__card mix audi">
+                        <div class="shape shape__smaller"></div>
+
+                        <h1 class="featured__title">i20</h1>
+                        <h3 class="featured__subtitle">Hyundai</h3>
+                        <hr>
+                        <h3 class="featured__price">$160 us at Day</h3>
+                        <img src="assets/img/hyundai-i20-sidefront.show.png" alt="" class="featured__img">
+                        <button class="button featured__button">
+                            <a href="rent.html" class="button">Rent</a>
+                        </button>
+
+                    </article>
+
+                    </article>
                     <article class="featured__card mix tesla">
                         <div class="shape shape__smaller"></div>
 
-                        <h1 class="featured__title">Cerato</h1>
+                        <h1 class="featured__title">Rio</h1>
                         <h3 class="featured__subtitle">Kia</h3>
                         <hr>
                         <h3 class="featured__price">$170 us at Day</h3>
-                        <img src="assets/img/kia-cerato.png" alt="" class="featured__img">
+                        <img src="assets/img/Rio-blue-side.png" alt="" class="featured__img">
                         <button class="button featured__button">
                             <a href="rent.html" class="button">Rent</a>
                         </button>
@@ -213,7 +241,7 @@
                         <h1 class="featured__title">Tucson</h1>
                         <h3 class="featured__subtitle">Hyundai</h3>
                         <hr>
-                        <h3 class="featured__price">$260 us at Day</h3>
+                        <h3 class="featured__price">$280 us at Day</h3>
                         <img src="assets/img/Hyundai-Tucson-N-Line.png" alt="" class="featured__img">
                         <button class="button featured__button">
                             <a href="rent.html" class="button">Rent</a>
@@ -222,7 +250,6 @@
                     </article>
                     <article class="featured__card mix porsche">
                         <div class="shape shape__smaller"></div>
-
                         <h1 class="featured__title">Sportage</h1>
                         <h3 class="featured__subtitle">Kia</h3>
                         <hr>
