--- a/about.html
+++ b/about.html
@@ -227,7 +227,7 @@
                         <h3 class="featured__subtitle">Kia</h3>
                         <hr>
                         <h3 class="featured__price">$150 us at Day</h3>
-                        <img src="assets/img/Car-7.jpg" alt="" class="featured__img">
+                        <img src="assets/img/Car-7.png" alt="" class="featured__img">
                         <button class="button featured__button">
                             <a href="rent.html" class="button">Rent</a>
                         </button>
