--- a/rent.html
+++ b/rent.html
@@ -76,14 +76,13 @@
                     <img src="assets/img/Sportage-back.png" alt="" class="about__img">
 
                     <div class="about__card">
-                        <h3 class="about__card-title">Rent the best economic cars selection for colombians geography</h3>
-                        <p class="about__card-description">You can rent days, weeks or monts</p>
+                        <h3 class="about__card-title">Rent a Car for Colombian geography</h3>
                     </div>
                 </div>
 
                 <div class="about__data">
-                    <h2 class="section__title about__title">Rent on-line: Just subscribe and rent<br>Rent personaly in our Bogota's offices</h2>
-                    <p class="about__description"> Here you can choose a car, days to use it, and the pay way<br> City, mountain, dessert, forest or coast?</p>
+                    <h2 class="section__title about__title">Rent HERE on-line: Just subscribe and rent<br>Rent personaly in our Bogota's offices</h2>
+                    <p class="about__description"> Here you can choose a car, days to use it, and the way pay<br> City, mountain, dessert, forest or coast?</p>
 
                     <a href="registration.html" class="button">Subscribe</a>
                 </div>
@@ -130,17 +129,42 @@
                             <h4>Kia</h4>
                             <p>Picanto</p>
                             <img src="assets/img/Front-Black.png">
-                            <p class="precio"><span class="u-pull-right ">$99</span></p>
+                            <p class="precio"><span class="u-pull-right ">$150 us</span></p>
                             <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="1">Agregar Al Carrito</a>
                         </div>
+                    </div>
+                </div>  
+                <div class="row">
+                    <div class="four columns">
+                        <div class="card">
+                            <div class="info-card">
+                                <h4>Hyundai</h4>
+                                <p>HBi20</p>
+                                <img src="assets/img/hyundai-hb20-blue-show.png">
+                                <p class="precio"><span class="u-pull-right ">$150 us</span></p>
+                                <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="1">Agregar Al Carrito</a>
+                            </div>
+                        </div>
                     </div>  
+                    <div class="row">
+                        <div class="four columns">
+                            <div class="card">
+                                <div class="info-card">
+                                    <h4>Hyundai</h4>
+                                    <p>i20 Sedan</p>
+                                    <img src="assets/img/hyundai-i20-sidefront.show.png">
+                                    <p class="precio"><span class="u-pull-right ">$180 us</span></p>
+                                    <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="1">Agregar Al Carrito</a>
+                                </div>
+                            </div>
+                        </div>  
                 <div class="four columns">
                     <div class="card">
                         <div class="info-card">
                             <h4>Kia</h4>
-                            <p>serato</p>
-                            <img src="assets/img/kia-cerato.png">
-                            <p class="precio"><span class="u-pull-right ">$150</span></p>
+                            <p>Rio</p>
+                            <img src="assets/img/Rio-blue-side.png">
+                            <p class="precio"><span class="u-pull-right ">$180</span></p>
                             <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="2">Agregar Al Carrito</a>
                         </div>
                     </div>
@@ -149,9 +173,9 @@
                     <div class="card">
                         <div class="info-card">
                             <h4>Hyundai</h4>
-                            <p>Tuckson</p>
+                            <p>Tucson</p>
                             <img src="assets/img/r2.jpg">
-                            <p class="precio"><span class="u-pull-right ">$260</span></p>
+                            <p class="precio"><span class="u-pull-right ">$280</span></p>
                             <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="3">Agregar Al Carrito</a>
                         </div>
                     </div> <!--.card-->
@@ -161,7 +185,7 @@
                         <div class="info-card">
                             <h4>Kia</h4>
                             <p>Sportage</p>
-                            <img src="assets/img/Kia-Sportage-front.png">
+                            <img src="assets/img/kia_spo_54.png">
                             <p class="precio"><span class="u-pull-right ">$280</span></p>
                             <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="4">Agregar Al Carrito</a>
                         </div>
