--- a/contact.html
+++ b/contact.html
@@ -71,7 +71,7 @@
             <div class="about__container container grid">
                 <div class="about__group">
 
-                    <img src="assets/img/hyundai-tucson-back.png" alt="" class="about__img">
+                    <img src="assets/img/Car-13.webp" alt="" class="about__img">
 
                     <div class="about__card">
                         <h3 class="about__card-title">Contact Nieto Rent a Car</h3>
@@ -79,7 +79,7 @@
                 </div>
 
                 <div class="about__data">
-                    <h2 class="section__title about__title">Contact<br>and Assistencial secure on route</h2>
+                    <h2 class="section__title about__title">We are based in Bogota, Colombia<br>Contact us</h2>
                     <p class="about__description">See the future with high-performance Gas cars produced by
                         renowned brands. They feature futuristic builds and designs with
                         new and innovative platforms that last a long time.</p>
@@ -124,7 +124,7 @@
                     </section>
 
                     <h2 class="section__title offer__title">
-                        Do You Want To Receive <br> Special Offers?
+                        Mail us, Watsapp, Call or Visit our Garage <br> Direct Contact 
                     </h2>
                     <section class="map">
             
@@ -144,11 +144,11 @@
 
                 <div class="offer__data">
                     <h2 class="section__title offer__title">
-                        Do You Want To Receive <br> Special Offers?
+                        Before and After you Rent <br> We are with you
                     </h2>
 
-                    <p class="offer__description">Be the first to receive all the information about our
-                        products and new cars by email by subscribing to our
+                    <p class="offer__description">Receive all the information about our
+                        cars here and subscribing to our
                         mailing list.</p>
 
                     <a href="registration.html" class="button">Subscribe for rent online</a>
