--- a/registration.html
+++ b/registration.html
@@ -80,12 +80,12 @@
                 </div>
 
                 <div class="about__data">
-                    <h2 class="section__title about__title">Follow the steps<br>and Go to Rent</h2>
+                    <h2 class="section__title about__title">Just Subscribe<br>and Go to Rent</h2>
                     <p class="about__description">See the future with high-performance Gas cars produced by
                         renowned brands. They feature futuristic builds and designs with
                         new and innovative platforms that last a long time.</p>
 
-                    <a href="know.html" class="button">Know More</a>
+                    <a href="Rent.html" class="button">Rent</a>
                 </div>
             </div>
         </section>
@@ -144,10 +144,10 @@
 
                 <div class="offer__data">
                     <h2 class="section__title offer__title">
-                        Do You Want To Receive <br> Special Offers?
+                        Rent a car Nieto Rent a Car <br> for Colombian routs
                     </h2>
 
-                    <p class="offer__description">Be the first to receive all the information about our
+                    <p class="offer__description">Receive all the information about our
                         products and new cars by email by subscribing to our
                         mailing list.</p>
 
