--- a/registration.html
+++ b/registration.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
+!<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link rel="shortcut icon" href="assets/img/Front-Black.png" type="image/x-icon" class="favicon">
     <!--=============== REMIX ICONS ===============-->
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
 
@@ -13,7 +13,10 @@
 
     <!--=============== CSS ===============-->
     <link rel="stylesheet" href="assets/css/styles.css">
-    <link rel="stylesheet" href="assets/css/myCustom.css">
+    <link rel="stylesheet" href="assets/css/normalize.css">
+    <link rel="stylesheet" href="assets/css/skeleton.css">
+    <link rel="stylesheet" href="assets/css/custom.css">
+    <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
     <link rel="stylesheet" href="assets/css/data_validation.css">
 
     <title>Nieto Rent a Car</title>
@@ -250,10 +253,8 @@
 
     <!--=============== SCROLL REVEAL - PAGE ANNIMATION ===============-->
     <script src="assets/js/scrollrevealAnimation.min.js"></script>
-
     <!--=============== SWIPER JS - PRODUCT SLIDER ===============-->
     <script src="/assets/js/swiper-bundle.min.js"></script>
-
     <!--=============== MIXITUP JS - FILTER PRODUCT ===============-->
     <script src="assets/js/mixitup.min.js"></script>
 
