--- a/rent.html
+++ b/rent.html
@@ -13,10 +13,10 @@
 
     <!--=============== CSS ===============-->
     <link rel="stylesheet" href="assets/css/styles.css">
-    <link rel="stylesheet" href="assets/css/myCustom.css">
     <link rel="stylesheet" href="assets/css/normalize.css">
     <link rel="stylesheet" href="assets/css/skeleton.css">
     <link rel="stylesheet" href="assets/css/custom.css">
+    <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
 
     <title>Nieto Rent a Car</title>
 </head>
