--- a/contact.html
+++ b/contact.html
@@ -13,10 +13,11 @@
 
     <!--=============== CSS ===============-->
     <link rel="stylesheet" href="assets/css/styles.css">
-    <link rel="stylesheet" href="assets/css/myCustom.css">
     <link rel="stylesheet" href="assets/css/normalize.css">
     <link rel="stylesheet" href="assets/css/skeleton.css">
     <link rel="stylesheet" href="assets/css/custom.css">
+    <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
+    
     <title>Nieto Rent a Car</title>
 </head>
 
@@ -256,8 +257,7 @@
     <!--=============== SCROLL REVEAL - PAGE ANNIMATION ===============-->
     <script src="assets/js/scrollrevealAnimation.min.js"></script>
 
-    <!--=============== SWIPER JS - PRODUCT SLIDER ===============-->
-    <script src="/assets/js/swiper-bundle.min.js"></script>
+   
 
     <!--=============== MIXITUP JS - FILTER PRODUCT ===============-->
     <script src="assets/js/mixitup.min.js"></script>
