--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!--=============== SWIPER CSS ===============-->
     <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
 
-    <!--=============== CSS ===============-->
+    <link rel="shortcut icon" href="assets/img/Front-Black.png" type="image/x-icon" class="favicon">
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="assets/css/normalize.css">
     <link rel="stylesheet" href="assets/css/skeleton.css">
