--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="assets/css/custom.css">
     <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
 
-    <title>Nieto Rent a Car</title>
+    <title>NietoRentCar</title>
 </head>
 
 <body>
