--- a/index.html
+++ b/index.html
@@ -4,11 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <!--=============== REMIX ICONS ===============-->
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
-
-    <!--=============== SWIPER CSS ===============-->
     <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
 
     <link rel="shortcut icon" href="assets/img/Front-Black.png" type="image/x-icon" class="favicon">
@@ -22,7 +18,7 @@
 </head>
 
 <body>
-    <!--==================== HEADER ====================-->
+
     <header class="header" id="header">
         <nav class="nav container">
             <a href="" class="nav__logo">
@@ -91,7 +87,7 @@
                         <h2 class="home__car-number">A.A.</h2>
                         <h3 class="home__car-name">5 Passengers</h3>
 
-                    </div>   
+                    </div>
                     <div class="home__car-data">
                         <div class="home__car-icon">
                             <i class="ri-flashlight-fill"></i>
@@ -115,7 +111,7 @@
                 <a href="rent.html" class="home__button">Rent</a>
 
                 <div class="slider__bg">
-                <div class="slider__bg-navBtn active"></div>
+                    <div class="slider__bg-navBtn active"></div>
                 </div>
 
 
@@ -128,15 +124,14 @@
             </div>
 
         </section>
-         <!--==================== GALLERY BANNER ====================-->
-         <section class="gallery section">
+
+        <section class="gallery section">
             <div class="gallery__container container grid">
                 <video class="video__slide active" src="assets/video/vid_1.mp4" autoplay muted loop></video>
             </div>
 
         </section>
 
-        <!--==================== ABOUT ====================-->
         <section class="about section" id="about">
             <div class="about__container container grid">
                 <div class="about__group">
@@ -163,21 +158,19 @@
 
         </section>
 
-
-        <!--==================== FEATURED ====================-->
         <section class="featured section" id="featured">
             <h2 class="section__title">Cars Models</h2>
             <div class="featured__container container">
                 <ul class="featured__filters">
                     <li>
                         <button class="featured__item" data-filter=".tesla">
-                            <img src= "assets/img/kia-logo.png" alt="">
+                            <img src="assets/img/kia-logo.png" alt="">
 
                         </button>
                     </li>
                     <li>
                         <button class="featured__item" data-filter=".audi">
-                            <img src= "assets/img/hyundai-logo.png" alt="">
+                            <img src="assets/img/hyundai-logo.png" alt="">
                         </button>
                     </li>
                 </ul>
@@ -268,9 +261,6 @@
 
         </section>
 
-       
-
-        <!--==================== OFFER ====================-->
         <section class="offer section">
 
             <div class="offer__container container grid">
@@ -293,7 +283,6 @@
         </section>
     </main>
 
-    <!--==================== FOOTER ====================-->
     <footer class="footer section">
         <div class="shapeX shape__big"></div>
         <div class="shapeX shape__small"></div>
@@ -371,27 +360,18 @@
             </div>
         </div>
         <span class="footer__copy">
-            &#169; <a target="_blank" href="https://nietodeveloper.github.io/Portafolio/" class="footer__dev-link">Created by Manuel Nieto</a>®Copyrights2024<p id="date"></p>
+            &#169; <a target="_blank" href="https://nietodeveloper.github.io/Portafolio/"
+                class="footer__dev-link">Created by Manuel Nieto</a>®Copyrights2024<p id="date"></p>
         </span>
     </footer>
-
-
-    <!--========== SCROLL UP ==========-->
 
     <a href="" class="scrollup" id="scroll-up">
         <i class="ri-arrow-up-s-line"></i>
     </a>
 
-    <!--=============== SWIPER JS - PRODUCT SLIDER ===============-->
     <script src="/assets/js/swiper-bundle.min.js"></script>
-
-    <!--=============== SCROLL REVEAL - PAGE ANNIMATION ===============-->
     <script src="assets/js/scrollrevealAnimation.min.js"></script>
-
-    <!--=============== MIXITUP JS - FILTER PRODUCT ===============-->
     <script src="assets/js/mixitup.min.js"></script>
-
-    <!--=============== MAIN JS ===============-->
     <script src="assets/js/main.js"></script>
 
 
