--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
             <div class="home__container container grid">
                 <div class="home__data">
                     <h1 class="home__title">
-                        Nieto Rent a Car in Bogota
+                        Nieto Rent a Car Bogota
                     </h1>
                     <h2 class="home__subtitle">
                         Kia Picanto
                     </h2>
                     <h3 class="home__elec">
-                        150 us/Dollars at Day
+                        99 us/Dollars at Day
                     </h3>
                 </div>
 
