--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="assets/css/custom.css">
     <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
 
-    <title>Nieto Rent Car</title>
+    <title>Nieto Rent Car Bogota</title>
 </head>
 
 <body>
@@ -21,7 +21,7 @@
     <header class="header" id="header">
         <nav class="nav container">
             <a href="" class="nav__logo">
-                Nieto Rent a Car
+                Nieto Rent a Car Bogota
             </a>
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list">
@@ -66,13 +66,13 @@
             <div class="home__container container grid">
                 <div class="home__data">
                     <h1 class="home__title">
-                        Nieto Rent a Car Bogota
+                        Rent a Nieto Car
                     </h1>
                     <h2 class="home__subtitle">
                         Kia Picanto
                     </h2>
                     <h3 class="home__elec">
-                        99 us/Dollars at Day
+                        60 us/Dollars at Day
                     </h3>
                 </div>
 
