--- a/index.html
+++ b/index.html
@@ -357,10 +357,14 @@
                 </ul>
             </div>
         </div>
+
         <span class="footer__copy">
-            &#169; <a target="_blank" href="https://nietodeveloper.github.io/Portafolio/"
-                class="footer__dev-link">Created by Manuel Nieto</a>®Copyrights2024<p id="date"></p>
+            &#169 <a target="_blank" href="https://nietodeveloper.github.io/Briefcase/index.html"
+                class="footer__dev-link">Created by Nieto Software Developer</a>
+            <p>®Copyrights2024</p>
+            <p id="date"></p>
         </span>
+
     </footer>
 
     <a href="" class="scrollup" id="scroll-up">
