--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
     <link rel="shortcut icon" href="assets/img/Front-Black.png" type="image/x-icon" class="favicon">
     <link rel="stylesheet" href="assets/css/styles.css">
@@ -371,10 +373,12 @@
         <i class="ri-arrow-up-s-line"></i>
     </a>
 
-    <script src="/assets/js/swiper-bundle.min.js"></script>
-    <script src="assets/js/scrollrevealAnimation.min.js"></script>
     <script src="assets/js/mixitup.min.js"></script>
     <script src="assets/js/main.js"></script>
+    <script src="assets/js/swiper-bundle.min.js"></script>
+    <script src="assets/js/scrollrevealAnimation.min.js"></script>
+    <script src="assets/js/script.js"></script>
+    <script src="assets/js/vanilla-tilt.js"></script>
 
 
 
