--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="shortcut icon" href="assets/img/Front-Black.png" type="image/x-icon" class="favicon">
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/custom.css">
+    <link rel="stylesheet" href="assets/css/data_validation.css">
     <link rel="stylesheet" href="assets/css/normalize.css">
     <link rel="stylesheet" href="assets/css/skeleton.css">
-    <link rel="stylesheet" href="assets/css/custom.css">
     <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
 
     <title>Nieto Rent Car Bogota</title>
 </head>
@@ -360,10 +361,7 @@
         </div>
 
         <span class="footer__copy">
-            &#169 <a target="_blank" href="https://nietodeveloper.github.io/Briefcase/index.html"
-                class="footer__dev-link">Created by Nieto Software Developer</a>
-            <p>®Copyrights2024</p>
-            <p id="date"></p>
+            &#169; <a target="_blank" href="https://nietodeveloper.github.io/Briefcase/" class="footer__dev-link">Created by Nieto Software Developer</a>®Copyrights2024<p id="date"></p>
         </span>
 
     </footer>
@@ -371,15 +369,13 @@
     <a href="" class="scrollup" id="scroll-up">
         <i class="ri-arrow-up-s-line"></i>
     </a>
-
+    
+    <script src="assets/js/firebase.js"></script>
     <script src="assets/js/mixitup.min.js"></script>
     <script src="assets/js/main.js"></script>
+    <script src="assets/js/script.js"></script>
     <script src="assets/js/swiper-bundle.min.js"></script>
     <script src="assets/js/scrollrevealAnimation.min.js"></script>
-    <script src="assets/js/script.js"></script>
-    <script src="assets/js/vanilla-tilt.js"></script>
-
-
 
 </body>
 
