--- a/index.html
+++ b/index.html
@@ -361,7 +361,9 @@
         </div>
 
         <span class="footer__copy">
-            &#169; <a target="_blank" href="https://nietodeveloper.github.io/Briefcase/" class="footer__dev-link">Created by Nieto Software Developer</a>®Copyrights2024<p id="date"></p>
+            &#169; <a target="_blank" href="https://nietodeveloper.github.io/Briefcase/" class="footer__dev-link">Created by Nieto Software Developer</a>
+            <p>®Copyrights2024</p>
+            <p id="date"></p>
         </span>
 
     </footer>
