new format time

--- a/about.html
+++ b/about.html
@@ -91,11 +91,11 @@
                 </div>
             </div>
         </section>
-            <div class="home__social">
-                <a href="#" class="home__social-icon"><i class="ri-facebook-fill"></i></a>
-                <a href="#" class="home__social-icon"><i class="ri-instagram-fill"></i></a>
-                <a href="#" class="home__social-icon"><i class="ri-twitter-fill"></i></a>
-            </div>
+        <div class="home__social">
+            <a href="#" class="home__social-icon"><i class="ri-facebook-fill"></i></a>
+            <a href="#" class="home__social-icon"><i class="ri-instagram-fill"></i></a>
+            <a href="#" class="home__social-icon"><i class="ri-twitter-fill"></i></a>
+        </div>
 
         </section>
 
@@ -293,7 +293,7 @@
 
         </section>
 
-       
+
         <!--==================== OFFER ====================-->
         <section class="offer section">
 
@@ -306,7 +306,8 @@
                         Ecxelent price <br> Secure vehicles
                     </h2>
 
-                    <p class="offer__description">The best option for rent a car in Bogota, good price, good cars, exelent price</p>
+                    <p class="offer__description">The best option for rent a car in Bogota, good price, good cars,
+                        exelent price</p>
 
                     <a href="rent.html" class="button">Rent Now</a>
                 </div>
@@ -396,12 +397,13 @@
             </div>
         </div>
         <span class="footer__copy">
-            &#169; <a target="_blank" href="https://nietodeveloper.github.io/Portafolio/" class="footer__dev-link">Created by Manuel Nieto</a>®Copyrights2023<p id="date"></p>
+            &#169; <a target="_blank" href="https://nietodeveloper.github.io/Briefcase/"
+                class="footer__dev-link">Created by Nieto Software Developer</a>
+            <p>®Copyrights2024</p>
+            <p id="date"></p>
         </span>
+
     </footer>
-
-
-    <!--========== SCROLL UP ==========-->
 
     <a href="" class="scrollup" id="scroll-up">
         <i class="ri-arrow-up-s-line"></i>
