--- a/rent.html
+++ b/rent.html
@@ -288,12 +288,12 @@
             </div>
         </div>
         <span class="footer__copy">
-            &#169; <a target="_blank" href="https://nietodeveloper.github.io/Portafolio/" class="footer__dev-link">Created by Manuel Nieto</a>®Copyrights2023<p id="date"></p>
+            &#169; <a target="_blank" href="https://nietodeveloper.github.io/Briefcase/" class="footer__dev-link">Created by Nieto Software Developer</a>
+            <p>®Copyrights2024</p>
+            <p id="date"></p>
         </span>
+
     </footer>
-
-
-    <!--========== SCROLL UP ==========-->
 
     <a href="" class="scrollup" id="scroll-up">
         <i class="ri-arrow-up-s-line"></i>
